--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,16 @@
     <title>Webpack Starter Kit</title>
 <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" />
+
   </head>
 
   <body>
   <form class="search-form" id="search-form">
-    <input type="text" name="query" autocomplete="off" placeholder="Search images..." />
+    <input class="input" type="text" name="query" autocomplete="off" placeholder="Search images..." />
     <button class="button submit" type="submit">look for</button>
   </form>
   <ul class="list"></ul>
     <button class="btn-load button" id="btn-load">Load more</button>
+
   </body>
 </html>
