подключила плагин без стилей до обновления версии ноды

--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,18 @@
 <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" />
 
+
   </head>
 
   <body>
-  <form class="search-form" id="search-form">
+   
+    <h1><a href="https://pixabay.com/api/docs/">Images from the resource pixabay</a></h1>
+     <form class="search-form" id="search-form">
     <input class="input" type="text" name="query" autocomplete="off" placeholder="Search images..." />
-    <button class="button submit" type="submit">look for</button>
+    <button class="button submit" type="submit">Look for</button>
   </form>
   <ul class="list"></ul>
-    <button class="btn-load button" id="btn-load">Load more</button>
+    <button class="btn-load button" id="btn-load" hidden='true'>Load more</button>
 
   </body>
 </html>
