--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,6 @@
     <title>Webpack Starter Kit</title>
 <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" />
-
-
   </head>
 
   <body>
@@ -19,7 +17,8 @@
     <button class="button submit" type="submit">Look for</button>
   </form>
   <ul class="list"></ul>
-    <button class="btn-load button" id="btn-load" hidden='true'>Load more</button>
+    <button class="btn-load button" id="btn-load" hidden='true'>Loading <div id='spinner'></div>
+    </button>
 
   </body>
 </html>
