достилизовала кнопку дозагрузки

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <button class="button submit" type="submit">Look for</button>
   </form>
   <ul class="list"></ul>
-    <button class="btn-load button" id="btn-load" hidden='true'>Loading <div id='spinner'></div>
+    <button class="btn-load button" id="btn-load" hidden='true'><span class="load-button" ><div id='spinner'></div>Loading</span><span class="download-button" hidden='true'>Download more</span></div>
     </button>
 
   </body>
